AC_INIT(guile2-xlib, 0.1)
AC_CONFIG_SRCDIR(guile-xlib.c)
AM_INIT_AUTOMAKE
AC_CONFIG_MACRO_DIR([m4])
AM_MAINTAINER_MODE

GUILE_PKG([2.2 2.0])
GUILE_FLAGS

AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AM_PROG_LIBTOOL

dnl Check for X.
AC_PATH_XTRA

dnl Checks for library functions.
AC_FUNC_MEMCMP

AC_OUTPUT(Makefile)

